--- a/package.json
+++ b/package.json
@@ -10,21 +10,30 @@
   "devDependencies": {
     "@types/chai": "^4.2.5",
     "@types/express": "^4.17.2",
+    "@types/highlightjs": "^9.12.0",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.14",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
     "chai": "^4.2.0",
+    "css-loader": "^3.2.0",
+    "dart-sass": "^1.23.7",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.0.1",
+    "file-loader": "^5.0.2",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "prettier": "^1.19.1",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.2",
+    "vue-loader": "^15.7.2",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
@@ -37,7 +46,12 @@
     "prepublish": "yarn lint && yarn test && yarn build"
   },
   "dependencies": {
+    "highlight.js": "^9.16.2",
+    "highlightjs": "^9.16.2",
     "stacktrace-js": "^2.0.1",
-    "vue-server-renderer": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue-server-renderer": "^2.6.10",
+    "vuex": "^3.1.2"
   }
 }
