--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "./dist",
+    "rootDir": ".",
     "strict": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
@@ -12,6 +13,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "~@/*": [
+        "./node_modules/*"
       ]
     }
   },
@@ -19,6 +23,8 @@
     "./src"
   ],
   "exclude": [
-    "./src/**/shims-*.d.ts"
+    "node_modules",
+    "**/*.spec.ts",
+    "dist"
   ]
 }
