--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Isaac Skelton <contact@isaacskelton.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/chai": "^4.2.5",
     "@types/express": "^4.17.2",
     "@types/highlightjs": "^9.12.0",
@@ -15,6 +16,7 @@
     "@types/node": "^12.12.14",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
+    "axios": "^0.19.0",
     "chai": "^4.2.0",
     "css-loader": "^3.2.0",
     "dart-sass": "^1.23.7",
