- Added a custom parser so we didn't need to include an extra library and it actually works with node. - TODO: Sourcemap parser.

--- a/package.json
+++ b/package.json
@@ -35,11 +35,9 @@
     "test": "nyc mocha 'tests/**/*.ts' --require ts-node/register",
     "lint": "eslint ./src/**/*.ts",
     "fix": "eslint ./src/**/*.ts --quiet --fix",
-    "build": "yarn tsc",
-    "prepublish": "yarn test && yarn build"
+    "build": "yarn tsc"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "stacktrace-js": "^2.0.1"
+    "express": "^4.17.1"
   }
 }
