--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "author": "Isaac Skelton <contact@isaacskelton.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/chai": "^4.2.5",
     "@types/express": "^4.17.2",
     "@types/highlightjs": "^9.12.0",
@@ -35,7 +34,8 @@
     "test": "nyc mocha 'tests/**/*.ts' --require ts-node/register",
     "lint": "eslint ./src/**/*.ts",
     "fix": "eslint ./src/**/*.ts --quiet --fix",
-    "build": "yarn tsc"
+    "build": "yarn tsc",
+    "prepublish": "yarn build && yarn test"
   },
   "dependencies": {
     "express": "^4.17.1"
